first commit on amazon exerecise

--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -3,6 +3,24 @@
   margin: 0px;
   box-sizing: content-box;
 }
+.centerIt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .app {
-  text-align: center;
+  background-color: rgb(234, 237, 237);
+}
+.btn {
+  background-color: rgb(250, 216, 76);
+  border: 1px solid;
+  border-color: #a99734 #9c7e31 #846a29;
+  border-radius: 3px;
+  padding: 2px 3px;
+  font-weight: 600;
+}
+.removeBtn {
+  width: 200px;
+  padding: 5px;
+  border: none;
 }
