add&remove functionality. Need to fix async in totalAmount after removing product from cart

--- a/src/Styles/product.css
+++ b/src/Styles/product.css
@@ -28,7 +28,7 @@
   height: 10%;
 }
 .product__addBtn_btn {
-  background-color: #e9aa5a;
+  background-color: rgb(250, 216, 76);
   border: 1px solid;
   border-color: #a99734 #9c7e31 #846a29;
   border-radius: 3px;
