--- a/src/Styles/cart.css
+++ b/src/Styles/cart.css
@@ -1,58 +1,74 @@
 .cartContainer {
-  display: flex;
-  align-items: flex-start;
-  max-width: 1500px;
-  height: 100vh;
-  margin: 0px auto;
-  padding: 20px;
+	display: flex;
+	flex-direction: row-reverse;
+	align-items: flex-start;
+	max-width: 1500px;
+	height: 100vh;
+	margin: 0px auto;
+	padding: 20px;
 }
-.cartConainer__cart {
-  width: 80%;
-  margin-right: 15px;
-  background-color: white;
-  padding: 10px;
+.cartContainer__checkOut {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	height: 80px;
+	padding: 12px;
+	background-color: white;
 }
+.cartContainer__checkOut_subtotal {
+	margin-bottom: 25px;
+}
+.checkoutBtn {
+	width: 180px;
+	padding: 5px;
+	border: none;
+}
+/* ===== */
 
+.cartConainer__cart {
+	width: 80%;
+	margin-right: 15px;
+	background-color: white;
+	padding: 10px;
+}
 .cartConainer__cart h1 {
-  font-weight: 80;
-  margin-bottom: -8px;
+	font-size: 24px;
+	font-weight: 80;
+	margin-bottom: -8px;
 }
 .cartConainer__cart .pPrice {
-  text-align: right;
-  display: block;
+	text-align: right;
+	display: block;
 }
 .cartConainer__cart hr {
-  margin-bottom: 10px;
-  border-top: 1px solid gray;
+	margin-bottom: 10px;
+	border-top: 1px solid gray;
 }
 /* ====== */
 
-/* ==== */
-.cartContainer__checkOut {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  height: 150px;
-  padding: 15px;
-  background-color: white;
-}
-.infoIcon {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: white;
-  color: rgb(67, 148, 168);
-}
-.cartContainer__checkOut_subtotal {
-  margin-top: 15px;
-  margin-bottom: 25px;
-}
 .cartContainer__total {
-  text-align: right;
-  padding: 5px 10px 10px 10px;
+	text-align: right;
+	padding: 5px 10px 10px 10px;
 }
-.checkoutBtn {
-  width: 200px;
-  padding: 5px;
-  border: none;
+/* ==== */
+
+@media screen and (max-width: 786px) {
+	.cartContainer {
+		display: block;
+	}
+	.cartContainer__checkOut {
+		height: 90px;
+		padding: 12px;
+		margin-bottom: 15px;
+	}
+	.checkoutBtn {
+		width: 100%;
+		padding: 5px;
+		border: none;
+	}
+	/* ===== */
+
+	.cartConainer__cart {
+		width: 100%;
+	}
 }
