--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -1,51 +1,107 @@
-.header {
-  position: sticky;
-  top: 0;
-  /* z-index: 100; */
-  height: 60px;
-  background: rgb(0, 0, 0);
+#header {
+	position: sticky;
+	top: 0;
+	flex-direction: column;
+	/* z-index: 100; */
+	height: 90px;
+	background: rgb(0, 0, 0);
+}
+.header__top {
+	display: flex;
+	justify-content: space-between;
+	height: 60px;
 }
 .header__logo {
-  width: 100px;
-  object-fit: contain;
-  margin: 0 20px;
-  margin-top: 10px;
+	width: 100px;
+	object-fit: contain;
+	margin: 0 20px;
+	margin-top: 16px;
 }
 .header__search {
-  width: 70%;
+	width: 60%;
 }
-.header__searchInput {
-  width: 95%;
-  padding: 12px 10px;
-  border: none;
-  border-radius: 5px 0px 0px 5px;
+.header__search_input {
+	width: 95%;
+	padding: 10px 10px;
+	border: none;
+	border-radius: 5px 0px 0px 5px;
 }
-.header__searchIcon {
-  padding: 7px;
-  background-color: #e9aa5a;
-  border-radius: 4px;
-  margin: -5px;
+
+.header__search_icon {
+	transform: scale(1.5);
+	padding: 3px;
+	background-color: #e9aa5a;
+	border-radius: 4px;
+	margin: -7px;
 }
 .header__nav {
-  width: 20%;
-  display: flex;
-  justify-content: space-around;
-  margin: 10px;
-  color: white;
+	max-width: 30%;
+	display: flex;
+	justify-content: space-around;
+	margin: 10px;
+	color: white;
 }
 .header__navOption {
-  flex-direction: column;
+	flex-direction: column;
+	width: 80px;
 }
 .header__navOption_LineOne {
-  font-size: 10px;
+	font-size: 10px;
 }
 .header__navOption_LineTwo {
-  font-size: 13px;
-  font-weight: 800;
+	font-size: 13px;
+	font-weight: 800;
+}
+
+@media screen and (max-width: 786px) {
+	.header__logo {
+		height: 30px;
+		margin-top: 20px;
+	}
+	.header__search {
+		width: 60%;
+		/* margin-right: 15px; */
+	}
+	.header__search_input {
+		padding: 8px;
+	}
+	.header__search_icon {
+		transform: scale(1.35);
+		margin: -5px;
+	}
+	.header__nav {
+		display: none;
+	}
+	.header__menuStripe p {
+		display: none;
+	}
+}
+
+.header__cart {
+	flex-direction: column;
+	margin: 0px 15px;
+	color: white;
 }
 .header__cart_icon {
-  color: white;
+	color: white;
 }
 .header__cart p {
-  padding: 5px;
+	margin-top: 3px;
+	margin-bottom: -3px;
+	color: rgb(255, 216, 20);
+	font-weight: 600;
+}
+/* ==== */
+.header__menuStripe {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	width: 100vw;
+	height: 30px;
+	background-color: rgb(35, 47, 62);
+	color: white;
+	font-size: 12px;
+}
+.header__menuStripe p {
+	margin: 2px 6px;
 }
