--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,17 +1,26 @@
 .homeContainer {
-  max-width: 1500px;
-  margin-left: auto;
-  margin-right: auto;
+	max-width: 1500px;
+	margin-left: auto;
+	margin-right: auto;
 }
 .home__banner {
-  max-width: 100vw;
-  z-index: -1;
-  margin-bottom: -150px;
-  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+	max-width: 100vw;
+	z-index: -1;
+	margin-bottom: -150px;
+	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
-/* .home__rows {
-} */
 .home__rows_row {
-  height: 350px;
-  margin: 15px 10px;
+	height: 350px;
+	margin: 15px 10px;
+}
+
+@media screen and (max-width: 786px) {
+	.home__banner {
+		margin-bottom: -80px;
+		mask-image: none;
+	}
+	.home__rows_row {
+		height: 250px;
+		margin: 15px 10px;
+	}
 }
