--- a/src/Styles/productInCart.css
+++ b/src/Styles/productInCart.css
@@ -1,6 +1,6 @@
 .productInCartContainer {
 	display: flex;
-	height: 200px;
+	height: 150px;
 	border-bottom: 1px solid gray;
 	margin-bottom: 10px;
 }
@@ -8,8 +8,8 @@
 	margin: 10px;
 }
 .product_img img {
-	width: 200px;
-	height: 150px;
+	width: 120px;
+	height: 120px;
 	object-fit: contain;
 }
 .product_info {
@@ -17,28 +17,44 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	width: 70%;
+	padding: 0px 10px;
+	font-size: 15px;
+}
 
-	padding: 10px;
+.product_info_title {
+	line-height: 1.5em;
+	height: 3em;
+	overflow: hidden;
 }
-.product_info_text {
-	height: 70%;
-}
+
 #inStock {
 	color: green;
 }
+.product_info_btns {
+	margin-top: 15px;
+}
 #quantity_select {
-	width: 30px;
-	margin-right: 5px;
-	background-color: rgb(245, 227, 157);
-	border-color: #a99734 #9c7e31 #846a29;
+	width: 40px;
+	margin-right: 10px;
+	padding: 1px;
+	background-color: rgb(248, 247, 242);
+	border-radius: 5px;
+	border-color: rgb(212, 205, 205);
+	box-shadow: 0px 2px 3px gray;
 }
 .removeProductBtn_btn {
-	width: 120px;
-	background-color: rgb(250, 216, 76);
-	border-color: #a99734 #9c7e31 #846a29;
+	border: none;
+	background-color: transparent;
+	text-decoration: underline;
+	color: rgb(22, 125, 144);
+	font-size: 10px;
+}
+.product_info_btn_span {
+	color: rgb(212, 200, 200);
+	margin-right: 10px;
 }
 .product_price {
-	width: 10%;
+	width: 80px;
 	padding: 10px;
 	text-align: right;
 }
