--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -2,7 +2,7 @@
 	position: sticky;
 	top: 0;
 	flex-direction: column;
-	/* z-index: 100; */
+	z-index: 100;
 	height: 90px;
 	background: rgb(0, 0, 0);
 }
