--- a/src/Styles/sign.css
+++ b/src/Styles/sign.css
@@ -1,25 +1,25 @@
-.loginContainer {
+.acountFormContainer {
 	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	background-color: white;
-	height: 100vh;
-}
-.login {
-	display: flex;
-	justify-content: flex-start;
 	flex-direction: column;
-	/* width: 400px; */
+	align-items: center;
+	height: 100vh;
+	background-color: rgb(255, 255, 255);
+}
+.acountForm {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	height: 60vh;
+	min-height: 400px;
 	margin-top: 15px;
 }
-.login__header {
-}
-.login__header_img {
+
+.acountForm__header_img {
 	object-fit: contain;
 	width: 100px;
 	height: 60px;
 }
-.login__form {
+.acountForm__form {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -27,31 +27,35 @@
 	width: 300px;
 	border: 1px solid rgb(211, 210, 210);
 	margin-bottom: 50px;
-
 	padding: 20px;
 }
-.login__form h2 {
+.acountForm__form h2 {
 	font-size: 28px;
 	font-weight: 300;
 	margin-bottom: 15px;
 }
-
-#passwordInput,
-#emailInput {
+.acountForm__form_input {
 	width: 260px;
 	margin-bottom: 10px;
 	border-radius: 3px;
 	border: 1px solid gray;
 	padding: 5px;
 }
-
-.login__btn {
+.acountForm__form_input::placeholder {
+	font-size: 11px;
+	color: rgb(165, 160, 160);
+}
+.acountForm__form_input:focus {
+	border: none;
+}
+.acountForm__btn {
 	width: 260px;
 	border: 1px solid rgb(211, 210, 210);
 	margin-bottom: 15px;
 	padding: 5px;
 }
-.pPolicy {
+.pPolicy,
+.pGoToSignIn {
 	font-size: 12px;
 	margin-bottom: 12px;
 }
@@ -78,13 +82,25 @@ h5 {
 }
 .create_acount_btn {
 	background-color: black transparent;
+	border: 1px solid gray;
 	border-radius: 4px;
 }
 
-#divHr {
-	width: 150%;
+/*=====   register ======*/
+.register__divider_txt {
+	background-color: aqua;
+	display: flex;
+	justify-content: center;
+	width: 105%;
+	height: 3px;
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.03) 30px, transparent);
+	margin: 15px auto;
+}
+.register__divider_txt::after {
+	display: block;
 	height: 44px;
-	/* border: 1px solid rgb(138, 59, 59); */
-	background: linear-gradient(to bottom, rgb(0, 0, 0, 0.14), rgb(0, 0, 0, 0.03) 3px, transparent);
-	/* box-shadow: 0 0px 15px -1px black; */
+	width: 100%;
+	background-color: transparent;
+	background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0), #fff);
+	content: "";
 }
