--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,13 +1,35 @@
 .homeContainer {
 	max-width: 1500px;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0px auto;
 }
-.home__banner {
-	max-width: 100vw;
+.home__topBanner {
+	width: 100%;
+}
+.home__topBanner_banner {
+	width: 100%;
+	height: 150px;
+	/* margin-bottom: -10px; */
+}
+.home__banner_img {
 	z-index: -1;
-	margin-bottom: -150px;
-	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+	width: 100%;
+	object-fit: contain;
+	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+.home__topBanner_arrows {
+	position: relative;
+	top: -50px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 15px;
+}
+.home__topBanner_arrow {
+	transform: scale(1.7);
+	margin: 15px;
+}
+.home__rows {
+	position: relative;
 }
 .home__rows_row {
 	height: 350px;
@@ -15,12 +37,24 @@
 }
 
 @media screen and (max-width: 786px) {
-	.home__banner {
-		margin-bottom: -80px;
-		mask-image: none;
+	.home__topBanner {
+		height: 200px;
+		margin-bottom: -4px;
+	}
+	.home__topBanner_arrows {
+		position: relative;
+		top: -80px;
+	}
+	.home__topBanner_arrow {
+		transform: scale(1.4);
 	}
 	.home__rows_row {
 		height: 250px;
 		margin: 15px 10px;
+	}
+}
+@media screen and (max-width: 700px) {
+	.home__topBanner {
+		margin-bottom: -50px;
 	}
 }
