--- a/src/Styles/sign.css
+++ b/src/Styles/sign.css
@@ -37,16 +37,20 @@
 .acountForm__form_input {
 	width: 260px;
 	margin-bottom: 10px;
-	border-radius: 3px;
 	border: 1px solid gray;
+	border-radius: 3px;
 	padding: 5px;
+	box-sizing: border-box;
+	outline: none;
 }
 .acountForm__form_input::placeholder {
 	font-size: 11px;
 	color: rgb(165, 160, 160);
 }
 .acountForm__form_input:focus {
-	border: none;
+	border: 1px solid rgb(255, 216, 20);
+	/* background-color: red; */
+	box-shadow: 0 0 2px 2px rgb(235, 181, 101);
 }
 .acountForm__btn {
 	width: 260px;
