Replace css files with style component. Functioning. With css comments. Need refactoring

--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -1,22 +1,22 @@
-* {
+/* * {
 	padding: 0px;
 	margin: 0px;
 	box-sizing: border-box;
-}
-.centerIt {
+} */
+/* .centerIt {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-body {
+} */
+/* body {
 	width: 100%;
 	overflow: visible;
 	background-color: rgb(234, 237, 237);
-}
-.btn {
+} */
+/* .btn {
 	background-color: rgb(255, 216, 20);
 	border-radius: 5px;
 	padding: 6px 3px;
 	font-size: 10px;
 	font-weight: 300;
-}
+} */
