--- a/src/Styles/cart.css
+++ b/src/Styles/cart.css
@@ -1,4 +1,4 @@
-.cartContainer {
+/* .cartContainer {
 	display: flex;
 	flex-direction: row-reverse;
 	align-items: flex-start;
@@ -6,26 +6,26 @@
 	height: 100vh;
 	margin: 0px auto;
 	padding: 20px;
-}
-.cartContainer__checkOut {
+} */
+/* .cartContainer__checkOut {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	height: 90px;
 	padding: 12px;
 	background-color: white;
-}
-.cartContainer__checkOut_subtotal {
+} */
+/* .cartContainer__checkOut_subtotal {
 	margin-bottom: 25px;
-}
-.checkoutBtn {
+} */
+/* .checkoutBtn {
 	width: 180px;
 	padding: 5px;
 	border: none;
-}
+} */
 /* ===== */
 
-.cartConainer__cart {
+/* .cartConainer__cart {
 	width: 80%;
 	margin-right: 15px;
 	background-color: white;
@@ -35,40 +35,40 @@
 	font-size: 24px;
 	font-weight: 80;
 	margin-bottom: -8px;
-}
-.cartConainer__cart .pPrice {
+} */
+/* .cartConainer__cart .pPrice {
 	text-align: right;
 	display: block;
-}
-.cartConainer__cart hr {
+} */
+/* .cartConainer__cart hr {
 	margin-bottom: 10px;
 	border-top: 1px solid gray;
-}
+} */
 /* ====== */
 
-.cartContainer__total {
+/* .cartContainer__total {
 	text-align: right;
 	padding: 5px 10px 10px 10px;
-}
+} */
 /* ==== */
 
 @media screen and (max-width: 786px) {
-	.cartContainer {
+	/* .cartContainer {
 		display: block;
 	}
 	.cartContainer__checkOut {
 		height: 90px;
 		padding: 12px;
 		margin-bottom: 15px;
-	}
-	.checkoutBtn {
+	} */
+	/* .checkoutBtn {
 		width: 100%;
 		padding: 5px;
 		border: none;
-	}
+	} */
 	/* ===== */
 
-	.cartConainer__cart {
+	/* .cartConainer__cart {
 		width: 100%;
-	}
+	} */
 }
