--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -1,4 +1,4 @@
-.footerHr {
+/* .footerHr {
 	background-color: aqua;
 	display: flex;
 	justify-content: center;
@@ -15,9 +15,8 @@
 	content: "";
 }
 #rights {
-	/* min-height: 40px; */
 	margin-top: 20px;
 	text-align: center;
 	font-size: 14px;
 	color: #767676;
-}
+} */
