--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,22 +1,22 @@
-.homeContainer {
+/* .homeContainer {
 	max-width: 1500px;
 	margin: 0px auto;
-}
-.home__topBanner {
+} */
+/* .home__topBanner {
 	width: 100%;
 }
 .home__topBanner_banner {
 	width: 100%;
 	height: 150px;
-	/* margin-bottom: -10px; */
 }
 .home__banner_img {
 	z-index: -1;
 	width: 100%;
 	object-fit: contain;
 	mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-}
-.home__topBanner_arrows {
+} */
+
+/* .home__topBanner_arrows {
 	position: relative;
 	top: -50px;
 	display: flex;
@@ -27,34 +27,35 @@
 .home__topBanner_arrow {
 	transform: scale(1.7);
 	margin: 15px;
-}
-.home__rows {
+} */
+
+/* .home__rows {
 	position: relative;
 }
 .home__rows_row {
 	height: 350px;
 	margin: 15px 10px;
-}
+} */
 
 @media screen and (max-width: 786px) {
-	.home__topBanner {
+	/* .home__topBanner {
 		height: 200px;
 		margin-bottom: -4px;
-	}
-	.home__topBanner_arrows {
+	} */
+	/* .home__topBanner_arrows {
 		position: relative;
 		top: -80px;
 	}
 	.home__topBanner_arrow {
 		transform: scale(1.4);
-	}
-	.home__rows_row {
+	} */
+	/* .home__rows_row {
 		height: 250px;
 		margin: 15px 10px;
-	}
+	} */
 }
 @media screen and (max-width: 700px) {
-	.home__topBanner {
+	/* .home__topBanner {
 		margin-bottom: -50px;
-	}
+	} */
 }
