--- a/src/Styles/sign.css
+++ b/src/Styles/sign.css
@@ -1,25 +1,25 @@
-.acountFormContainer {
+/* .acountFormContainer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	height: 100vh;
 	background-color: rgb(255, 255, 255);
-}
-.acountForm {
-	display: flex;
+} */
+/* .acountForm { */
+/* display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	height: 60vh;
 	min-height: 400px;
-	margin-top: 15px;
-}
+	margin-top: 15px; */
+/* } */
 
-.acountForm__header_img {
+/* .acountForm__header_img {
 	object-fit: contain;
 	width: 100px;
 	height: 60px;
-}
-.acountForm__form {
+} */
+/* .acountForm__form {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -33,37 +33,37 @@
 	font-size: 28px;
 	font-weight: 300;
 	margin-bottom: 15px;
-}
-.acountForm__form_input {
-	width: 260px;
+} */
+/* .acountForm__form_input { */
+/* width: 260px;
 	margin-bottom: 10px;
 	border: 1px solid gray;
 	border-radius: 3px;
 	padding: 5px;
 	box-sizing: border-box;
-	outline: none;
-}
-.acountForm__form_input::placeholder {
+	outline: none; */
+/* } */
+/* .acountForm__form_input::placeholder {
 	font-size: 11px;
 	color: rgb(165, 160, 160);
 }
 .acountForm__form_input:focus {
 	border: 1px solid rgb(255, 216, 20);
-	/* background-color: red; */
 	box-shadow: 0 0 2px 2px rgb(235, 181, 101);
-}
-.acountForm__btn {
+} */
+/* .acountForm__btn {
 	width: 260px;
 	border: 1px solid rgb(211, 210, 210);
 	margin-bottom: 15px;
 	padding: 5px;
-}
-.pPolicy,
+} */
+/* .pPolicy,
 .pGoToSignIn {
 	font-size: 12px;
 	margin-bottom: 12px;
-}
-.divider_txt {
+} */
+
+/* .divider_txt {
 	width: 100%;
 	text-align: center;
 }
@@ -83,15 +83,15 @@ h5 {
 	margin-top: -8px;
 	border-top: 2px solid #e7e7e7;
 	background-color: transparent;
-}
-.create_acount_btn {
+} */
+/* .create_acount_btn {
 	background-color: black transparent;
 	border: 1px solid gray;
 	border-radius: 4px;
-}
+} */
 
 /*=====   register ======*/
-.register__divider_txt {
+/* .register__divider_txt {
 	background-color: aqua;
 	display: flex;
 	justify-content: center;
@@ -107,4 +107,4 @@ h5 {
 	background-color: transparent;
 	background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0), #fff);
 	content: "";
-}
+} */
